# memd

./: .gitignore  Cargo.toml  README.md
core_types/: Cargo.toml
core_types/src/: lib.rs
engine_api/: Cargo.toml
engine_api/src/: lib.rs  main.rs
memd-mcp/: Cargo.toml
memd-mcp/src/: main.rs
