[package]
name = "memd-mcp"
version = "0.1.0"
edition = "2024"

[dependencies]
engine_api = { path = "../engine_api" }
core_types = { path = "../core_types" }
rusqlite = { version = "0.38.0", features = ["bundled"] }
rmcp = { version = "1.1.0", features = ["server", "transport-io"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1"
schemars = "1.2.1"
serde = { version = "1.0.228", features = ["derive"]}
anyhow = "1"
